# morpheus-rs

./: Cargo.toml  README.md
api/: Cargo.toml
api/resources/: epepaideukh.json  luomenos.json
cli/: Cargo.toml
cli/src/: main.rs
morpheus-api/: Cargo.toml
morpheus-api/resources/: andra.json  facienda.json  leleipsetai.json  uno.json
morpheus-api/src/: lib.rs
morpheus-api/src/parser/: mod.rs  test.rs  utils.rs
morpheus-api/src/query/: mod.rs  tests.rs
morpheus-api/src/utils/: grammar.rs  mod.rs
morpheus-cli/: Cargo.toml
morpheus-cli/src/: main.rs  util.rs
