[package]
name = "morpheus-cli"
authors.workspace = true
license-file.workspace = true
description = "CLI tool for querying Perseids Morpheus API"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morpheus-api = { path = "../api/"}
clap = { version = "4.4.18", features = ["derive"] }
tokio = {version = "1.33.0", features = ["macros", "rt-multi-thread"]}
anyhow = "1.0.75"
regex = "1.10.3"
betacode = "1.2.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = "0.11.23"
serde_json = "1.0.111"
csv = "1.3.0"
json = "0.12.4"
home = "0.5.9"
serde = { version = "1.0.195", features = ["derive"] }
tv_lib = "0.1.2"
