[package]
name = "morpheus-api"
authors = ["Caio Geraldes <caio.geraldes@usp.br>"]
description = "Library for querying and parsing the Perseids Morpheus API"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
lazy_static = "1.4.0"
serde = { version = "1.0.195", features = ["derive"] }
serde-csv-core = "0.2.0"
serde_json = "1.0.111"
serde_with = "3.4.0"
unicode-normalization = "0.1.22"
